--- a/style.css
+++ b/style.css
@@ -74,6 +74,54 @@ footer {
 footer p {
   margin: 0;
 }
+
+
+/*---- Overlay ----*/
+#overlay {
+  position: fixed;
+  height: 100%; 
+  width: 100%;
+  top: 0;
+  right: 0;  
+  bottom: 0;
+  left: 0;
+  background: rgba(0,0,0,0.8);
+  z-index: 1;
+}
+#popup {
+  max-width: 500px;
+  width: 80%;
+  max-height: 300px;
+  height: 80%; 
+  padding: 20px;
+  position: relative;
+  background: #fff;
+  margin: 20px auto;
+  font-size: 1em;
+  border-radius: 1em;
+}
+#close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  color: #000;
+}
+#popup p {
+  font-size: 1.5em;
+  margin-bottom: 0;
+  font-weight: 500;
+}
+#station-name {
+  margin-bottom: 1em;
+  text-transform: uppercase;
+  padding-bottom: .5em;
+  margin-bottom: .5em;
+  border-bottom: 1px solid;
+}
+
+/*---- Mobile Breakpoints ----*/
+
 @media (max-width: 767px) {
   header {
     height: unset;
