Updates Current Temp layout

--- a/style.css
+++ b/style.css
@@ -23,15 +23,21 @@ header {
   flex-grow: 1;
   max-width: 30em;
   padding: 0 .5em 0 1em;
+  border-top-left-radius: .25rem;
+  border-bottom-left-radius: .25rem;
 }
 #location-search input[type=submit] {
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
 }
+.weather-message {
+  font-weight: 500;
+  margin-bottom: 0;
+}
 
 /*---- Main ----*/
 main {
-  height: calc(100% - 10em);
+  height: calc(100% - 8.5em);
   min-height: 500px;
   position: relative;
 }
@@ -43,33 +49,43 @@ main {
   z-index: 1;
   top: 1em;
   right: 1em;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 1.25em;
+  background: #007bffa3;
+  padding: 1.25em 1.25em 1.5em;
   border-radius: 1em;
+  width: 100%;
+  max-width: 15em;
+  color: white;
 }
 .weather-message-wrapper {
   padding-top: .5em;
   margin-top: .5em;
   border-top: solid 3px rgba(22, 33, 106, .7);
+  text-align: center;
 }
 .weather-info-container p {
-  margin: 0;
+  margin-bottom: 0;
   line-height: 1em;
 }
 .current-temp {
-  font-size: 5em;
+  font-size: 3.5em;
 }
-.max-min-container {
-  padding-left: 1em;
+.weather-icon {
+  width: 60px;
+  height: 60px;
 }
 .max-min-container p {
-  font-size: 1.25em;
+  font-size: 1.2em;
+}
+.max-temp {
+  margin-right: .5em;
+  padding-right: .5em;
+  border-right: 1px solid white;
 }
 
 /*---- Footer ----*/
 footer {
   background: #E6E6E6;
-  height: 5em;
+  height: 3.5em;
 }
 footer p {
   margin: 0;
