--- a/style.css
+++ b/style.css
@@ -103,18 +103,23 @@ footer p {
   left: 0;
   background: rgba(0,0,0,0.8);
   z-index: 1;
+  display: none;
 }
 #popup {
   max-width: 500px;
   width: 80%;
   max-height: 300px;
   height: 80%; 
-  padding: 20px;
-  position: relative;
+  padding: 2em;
+  position: absolute;
   background: #fff;
-  margin: 20px auto;
   font-size: 1em;
   border-radius: 1em;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 #close {
   position: absolute;
